hopefully fixed button sizing on mobile

--- a/web/geoguessr-app/src/components/ProfileCard.css
+++ b/web/geoguessr-app/src/components/ProfileCard.css
@@ -114,13 +114,15 @@
   background-position: left center;
   color: #ffffff;
   font-weight: 500;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.75rem;
   margin-bottom: 1rem;
   border-width: 3px;
   border-color: #edcae6;
   border-radius: 0.375rem;
   cursor: pointer;
   transition: background-position 0.5s ease;
+  margin-left: 0.1rem;
+  margin-right: 0.1rem;
 }
 
 .profile-card-footer a button:hover {
